feat: :sparkles: added needed recommendation count
