# docs/swagger.json
@@ -275,7 +275,7 @@
             }
         },
         "/recommendation/getrecipes": {
-            "get": {
+            "post": {
                 "description": "Get Recommendations",
                 "consumes": [
                     "application/json"
@@ -287,6 +287,17 @@
                     "recommendation"
                 ],
                 "summary": "Get Recommendations",
+                "parameters": [
+                    {
+                        "description": "dates(epoch format) : {'start_date':1643914403 ,'end_date':1644173603 }",
+                        "name": "recommendation",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": ""
